--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "livecounts.tk",
-  "version": "2.0.0-beta",
+  "version": "2.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
