--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "plausible-tracker": "^0.3.8"
   },
   "devDependencies": {
     "nodemon": "^2.0.20",
